samples/_failures_safe/1761161669_f42f64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20373518.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_20373518.c:127:5: error: expected expression at end of input
  127 |     int severity = parse_severity(
      |     ^~~
./samples/SAFE/__tmp_20373518.c:127:5: error: expected declaration or statement at end of input
